infrastructure/vault/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-vault
  namespace: serves
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - vault.fluidattacks.com
      secretName: vault-tls
  rules:
    - host: vault.fluidattacks.com
      http:
        paths:
          - backend:
              serviceName: vault
              servicePort: 8200
